# xdwim

./: .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  GNUmakefile  Makefile  README.md  dconf-shortcuts  flake.nix  setup.py  shell.nix  tests.c  xdwim  xdwim.c  xdwim.desktop  xdwim.h  xdwim.py  xdwim.service  xdwimctl  xdwimctl.c  xdwimctl.py
.github/workflows/: flakehub-publish-rolling.yml
module/: xdwim.nix
src/: lib.rs
